FIX: Don't allow content to overflow (#51)
closes #51

--- a/classes/table.css
+++ b/classes/table.css
@@ -1,5 +1,7 @@
 .table {
 
+  margin: 1em;
+
   & td {
     border: 1px solid #CCC;
   }
